--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -7,7 +7,7 @@
     }
     &section {
         width: 100%;
-        height: 100vh;
+        min-height: 100vh;
         &.u-extra {
             height: 130vh;
         }
@@ -79,9 +79,22 @@
         color: var(--color-0);
     }
     &middle {
-        height: 20rem;
+        min-height: 20rem;
         flex-direction: column;
         justify-content: flex-start;
+    }
+    &cubo {
+        &::before {
+            content: '';
+            width: 90%;
+            height: 90%;
+            border: 4px solid var(--color-a);
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            background-color: transparent;
+        }
     }
 }
 .c- {
@@ -93,5 +106,19 @@
         padding: 2vw;
     }
     &aboutUs {
+    }
+    &founders {
+        display: grid;
+        grid-template-columns: repeat(2, 360px);
+        justify-content: space-around;
+        grid-gap: 2rem;
+        max-width: 890px;
+        margin: auto;
+        &_this {
+            position: relative;
+            display: inline-flex;
+            padding: 20px;
+            margin: 0;
+        }
     }
 }
