--- a/index.css
+++ b/index.css
@@ -20,10 +20,12 @@ html { font-family: var(--font-avenirnext), Roboto, Helvetica, sans-serif; font-
 
 body { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 100%; height: 100%; padding: 0; margin: 0; font-size: inherit; background-color: #fff; cursor: none; }
 
+img { max-width: 100%; }
+
 /* ---------------------------------- */
 .o-main { width: 100%; height: 100%; }
 
-.o-section { width: 100%; height: 100vh; }
+.o-section { width: 100%; min-height: 100vh; }
 
 .o-section.u-extra { height: 130vh; }
 
@@ -51,9 +53,15 @@ body { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pa
 
 .u-message { background-color: #1c1e1f; color: var(--color-0); }
 
-.u-middle { height: 20rem; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: start; -ms-flex-pack: start; justify-content: flex-start; }
+.u-middle { min-height: 20rem; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: start; -ms-flex-pack: start; justify-content: flex-start; }
+
+.u-cubo::before { content: ''; width: 90%; height: 90%; border: 4px solid var(--color-a); position: absolute; top: 0; left: 0; z-index: -1; background-color: transparent; }
 
 .c-main-title, .c-main-message { width: 90vw; max-width: 1100px; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; padding: 2vw; }
+
+.c-founders { display: -ms-grid; display: grid; -ms-grid-columns: (360px)[2]; grid-template-columns: repeat(2, 360px); -ms-flex-pack: distribute; justify-content: space-around; grid-gap: 2rem; max-width: 890px; margin: auto; }
+
+.c-founders_this { position: relative; display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; padding: 20px; margin: 0; }
 
 /* ---------------------------------- */
 .svg-main_title .cls-1 { fill: none; }
