--- a/index.css
+++ b/index.css
@@ -61,7 +61,9 @@ img { max-width: 100%; }
 
 .c-founders { display: -ms-grid; display: grid; -ms-grid-columns: (360px)[2]; grid-template-columns: repeat(2, 360px); -ms-flex-pack: distribute; justify-content: space-around; grid-gap: 2rem; max-width: 890px; margin: auto; }
 
-.c-founders_this { position: relative; display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; padding: 20px; margin: 0; }
+.c-founders_this { max-height: 320px; position: relative; display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; padding: 20px; margin: 0; }
+
+.c-founders_this-photo { width: 100%; height: 100%; -o-object-fit: cover; object-fit: cover; -o-object-position: left; object-position: left; }
 
 /* ---------------------------------- */
 .svg-main_title .cls-1 { fill: none; }
