--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -115,10 +115,21 @@
         max-width: 890px;
         margin: auto;
         &_this {
+            max-height: 320px;
             position: relative;
             display: inline-flex;
             padding: 20px;
             margin: 0;
+            &-photo {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: left;
+            }
+            &-info {
+            }
+            &-caption {
+            }
         }
     }
 }
