--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -109,13 +109,24 @@
     }
     &founders {
         display: grid;
-        grid-template-columns: repeat(2, 360px);
+        grid-template-columns: repeat(10, 1fr);
+        grid-template-rows: repeat(5, 90px);
         justify-content: space-around;
-        grid-gap: 2rem;
+        grid-gap: 0;
         max-width: 890px;
         margin: auto;
+        padding: 10vw 0;
         &_this {
-            max-height: 320px;
+            &:nth-child(1) {
+                grid-column: span 4 / 5;
+                grid-row: 1 / 5;
+            }
+            &:nth-child(2) {
+                grid-column: span 4 / 11;
+                grid-row: 3 / 7;
+            }
+            min-height: 320px;
+            min-width: 330px;
             position: relative;
             display: inline-flex;
             padding: 20px;
@@ -129,6 +140,9 @@
             &-info {
             }
             &-caption {
+                &--title {
+                    margin: 0;
+                }
             }
         }
     }
