udpate: detalles de texto en html, cambio tamaño tipografía en html 16 -> 20px

--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -50,7 +50,7 @@
     }
 
     &head_section {
-        font-size: 7.89rem;
+        font-size: 10vmin;
         margin: 1vh 0 3vh;
         font-family: var(--font-avenirnext-bold), Helvetica;
         font-weight: bold;
