--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@
 
 h1, h2, h3, h4, h5, h6 { font-family: var(--font-avenirnext-bold); }
 
-html { font-family: var(--font-avenirnext), Roboto, Helvetica, sans-serif; font-size: 16px; height: 100%; width: 100%; }
+html { font-family: var(--font-avenirnext), Roboto, Helvetica, sans-serif; font-size: 20px; height: 100%; width: 100%; }
 
 body { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 100%; height: 100%; padding: 0; margin: 0; font-size: inherit; background-color: #fff; cursor: none; }
 
@@ -43,7 +43,7 @@ img { max-width: 100%; }
 
 .u-head_section, .u-headding, .u-message { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
 
-.u-head_section { font-size: 7.89rem; margin: 1vh 0 3vh; font-family: var(--font-avenirnext-bold), Helvetica; font-weight: bold; color: var(--color-a); -webkit-transition: text-shadow 0.3s ease-in-out, color 0.35s ease-in-out; -o-transition: text-shadow 0.3s ease-in-out, color 0.35s ease-in-out; transition: text-shadow 0.3s ease-in-out, color 0.35s ease-in-out; }
+.u-head_section { font-size: 10vmin; margin: 1vh 0 3vh; font-family: var(--font-avenirnext-bold), Helvetica; font-weight: bold; color: var(--color-a); -webkit-transition: text-shadow 0.3s ease-in-out, color 0.35s ease-in-out; -o-transition: text-shadow 0.3s ease-in-out, color 0.35s ease-in-out; transition: text-shadow 0.3s ease-in-out, color 0.35s ease-in-out; }
 
 .u-head_section::before { content: attr(data-name); width: 200%; left: -50%; position: absolute; -webkit-filter: opacity(0.2); filter: opacity(0.2); opacity: 0.3; font-size: 200%; color: rgba(74, 74, 74, 0.72); z-index: -1; }
 
@@ -121,7 +121,7 @@ img { max-width: 100%; }
 
 .fx-mask:before, .fx-mask:after { position: absolute; letter-spacing: -0.1vmin; z-index: 20; }
 
-.fx-mask:before { content: attr(data-project); top: 0vh; right: -1vw; font-size: 1.6rem; -webkit-transform: rotate(-90deg); -ms-transform: rotate(-90deg); transform: rotate(-90deg); -webkit-transform-origin: bottom right; -ms-transform-origin: bottom right; transform-origin: bottom right; }
+.fx-mask:before { content: attr(data-project); top: 0vh; right: -1vw; font-size: 1.6rem; -webkit-transform: rotate(-90deg); -ms-transform: rotate(-90deg); transform: rotate(-90deg); -webkit-transform-origin: bottom right; -ms-transform-origin: bottom right; transform-origin: bottom right; background-color: var(--color-a); color: var(--color_1); padding: 0 10px; }
 
 .fx-mask:after { content: attr(data-product) " / " attr(data-product-count); bottom: 2vh; left: 2vw; font-size: 6vmin; }
 
