--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -115,7 +115,7 @@
         grid-gap: 0;
         max-width: 890px;
         margin: auto;
-        padding: 10vw 0;
+        padding: 5vw 0 5vw 0;
         &_this {
             &:nth-child(1) {
                 grid-column: span 4 / 5;
