--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -8,31 +8,59 @@
     &section {
         width: 100%;
         min-height: 100vh;
+        overflow: hidden;
+        &:first-of-type {
+            padding-top: 7rem;
+            background-color: rgb(240, 240, 240);
+        }
         &.u-extra {
             height: 130vh;
         }
     }
     &header {
+        position: fixed;
+        z-index: 10;
+        width: 100%;
+        top: 0;
+        left: 0;
         display: flex;
         min-height: 3rem;
         justify-content: space-between;
         align-items: center;
-        padding: 1rem 4vw;
+        padding: 2rem 6vw;
+        &_btn {
+            background-color: transparent;
+            min-height: 3rem;
+            border: none;
+        }
     }
     &logo {
         max-width: 4rem;
         width: 100%;
     }
     &menu {
-        opacity: 0;
-        max-width: 3rem;
         width: 100%;
-    }
-    &logo,
-    &menu {
-        min-height: 3rem;
-        border: none;
-        background-color: transparent;
+        max-width: 400px;
+        &_btn {
+            @extend .o-header_btn;
+            max-width: 3rem;
+            opacity: 0;
+            display: none;
+        }
+        &_options {
+            display: flex;
+            justify-content: space-around;
+            margin: 0;
+            padding: 0;
+            &-item {
+                list-style-type: none;
+                font-family: var(--font-avenirnext-medium);
+            }
+            &-link {
+                text-decoration: none;
+                text-decoration-color: var(--color-a);
+            }
+        }
     }
     &article {
         padding: 2vh 4vw;
@@ -40,6 +68,17 @@
     &wrapper {
         max-width: 1100px;
         margin: auto;
+    }
+    &mega_heading {
+        font-size: 610px;
+        font-family: var(--font-avenirnext-medium);
+        color: #f3f3f3;
+        text-shadow: 0 0 30px #e0e0e0;
+        position: absolute;
+        z-index: 1;
+        top: auto;
+        bottom: 130px;
+        left: 6vmin;
     }
 }
 .u- {
@@ -105,7 +144,13 @@
         width: 90vw;
         max-width: 1100px;
         user-select: none;
-        padding: 2vw;
+    }
+    &main-message {
+        padding: 2vw 0;
+    }
+    &main-title {
+        padding-top: 80px;
+        z-index: 2;
     }
     &aboutUs {
     }
