--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 :root {
     --duration: 1.6s;
     --easing: cubic-bezier(0.2, 0, 0.3, 1);
@@ -8,7 +9,7 @@
     --color-w: #ffffff;
     --color-0: #d4d4d4;
     --color-1: #323232;
-    --color-a: #fdc400; //#bc5ff1;
+    --color-a: #eec32e; //#bc5ff1;
     --color-b: #fdc400; //#7842e6;
     --color-c: #fdc400; //#3a1a7b;
 
