--- a/src/utilities/_mask.scss
+++ b/src/utilities/_mask.scss
@@ -171,7 +171,7 @@
             margin: 0;
             transition: text-shadow 0.3s ease-in-out, color 0.35s ease-in-out;
             text-shadow: 0 1px 0 var(--color-c);
-            font-family: var(--font-avenirnext);
+            font-family: var(--font-normal);
             &:hover {
                 text-shadow: 0 3px 0 var(--color-1);
                 color: var(--color-w);
