--- a/src/_base.scss
+++ b/src/_base.scss
@@ -12,11 +12,11 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: var(--font-avenirnext-bold);
+    font-family: var(--font-bold);
 }
 
 html {
-    font-family: var(--font-avenirnext), Roboto, Helvetica, sans-serif;
+    font-family: var(--font-normal), Roboto, Helvetica, sans-serif;
     font-size: 20px;
     height: 100%;
     width: 100%;
