--- a/src/style.scss
+++ b/src/style.scss
@@ -5,13 +5,21 @@
     --easing: cubic-bezier(0.2, 0, 0.3, 1);
     --theme-contrast: #323232;
     --color-w: #ffffff;
-    --color-0: #f0f0f0;
+    --color-0: #fefefe;
     --color-1: #323232;
     --color-a: #eec32e; //#bc5ff1;
     --color-b: #fdc400; //#7842e6;
     --color-c: #fdc400; //#3a1a7b;
 
     --theme-section-bg: var(--color-w);
+    --theme-headding-enfasis: var(--color-a);
+    --theme-headding-separador: var(--color-a);
+
+    --theme-card-content-bg: var(--color-w);
+    --theme-card-before-border-bg: var(--color-1);
+
+    --theme-mega-headding-color: var(--color-w);
+    --theme-mega-headding-shadow: 0, 0, 0;
 
     --font-medium: AvenirNext-Medium, sans-serif;
     --font-bold: AvenirNext-Bold, sans-serif;
