--- a/src/styles/_specificity.scss
+++ b/src/styles/_specificity.scss
@@ -10,24 +10,69 @@
         --theme-section-bg: var(--color-a);
         --theme-headding-enfasis: var(--color-w);
         --theme-headding-separador: var(--color-w);
-        --theme-card-bg: var(--color-w);
-        --theme-card-before: var(--color-a);
+        --theme-card-before-border-bg: var(--color-1);
+        --theme-mega-headding-color: #f4c82a;
+        --theme-mega-headding-shadow: 30, 30, 30;
     }
     &[data-theme='light'] {
         --theme-section-bg: var(--color-w);
         --theme-headding-enfasis: var(--color-a);
         --theme-headding-separador: var(--color-a);
+        --theme-mega-headding-color: var(--color-w);
+        --theme-mega-headding-shadow: 0, 0, 0;
+        --theme-card-content-bg: var(--color-w);
+        --theme-card-before-border-bg: var(--color-a);
     }
     &[data-theme='gray'] {
         --theme-section-bg: var(--color-0);
         --theme-headding-enfasis: var(--color-a);
         --theme-headding-separador: var(--color-a);
+        --theme-card-content-bg: var(--color-a);
     }
     &[data-theme='dark'] {
         --theme-section-bg: var(--color-1);
         --theme-headding-enfasis: var(--color-a);
         --theme-headding-separador: var(--color-a);
         .c-section_headding {
+        }
+    }
+}
+
+.c- {
+    &grid {
+        &[data-grid='card'] {
+            .c-card {
+                min-height: 320px;
+                min-width: 330px;
+                display: inline-flex;
+                &:nth-child(1) {
+                    grid-column: 3 / 10;
+                    grid-row: 3 / 10;
+                }
+                &:nth-child(2) {
+                    grid-column: 13 / 20;
+                    grid-row: 6 / 13;
+                }
+            }
+        }
+        &[data-grid='founders'] {
+            .c-card {
+                min-height: 320px;
+                min-width: 330px;
+                display: inline-flex;
+                &:nth-child(1) {
+                    grid-column: 2 / 10;
+                    grid-row: 3 / 10;
+                }
+                &:nth-child(2) {
+                    grid-column: 12 / 20;
+                    grid-row: 1 / 8;
+                }
+                &:nth-child(3) {
+                    grid-column: 9 / 17;
+                    grid-row: 11 / 18;
+                }
+            }
         }
     }
 }
