--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -16,60 +16,6 @@
     }
     &aboutUs {
     }
-    &founders,
-    &cards {
-        display: grid;
-        grid-template-columns: repeat(10, 1fr);
-        grid-template-rows: repeat(5, 90px);
-        justify-content: space-around;
-        grid-gap: 0;
-        max-width: 890px;
-        margin: auto;
-        padding: 5vw 0 5vw 0;
-        &_this,
-        &_card {
-            &:nth-child(1) {
-                grid-column: span 4 / 5;
-                grid-row: 1 / 5;
-            }
-            &:nth-child(2) {
-                grid-column: span 4 / 11;
-                grid-row: 3 / 7;
-            }
-            min-height: 320px;
-            min-width: 330px;
-            position: relative;
-            display: inline-flex;
-            padding: 20px;
-            margin: 0;
-            &-photo {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                object-position: left;
-            }
-            &-info {
-                background-color: var(--theme-card-bg);
-                padding: 20px;
-            }
-            &-caption {
-                &--title {
-                    margin: 0;
-                }
-            }
-            &::before {
-                content: '';
-                width: 90%;
-                height: 90%;
-                border: 4px solid var(--color-a);
-                position: absolute;
-                top: 0;
-                left: 0;
-                z-index: -1;
-                background-color: transparent;
-            }
-        }
-    }
     &contact {
         display: grid;
         grid-gap: 0.5em;
@@ -79,47 +25,57 @@
 .c- {
     &grid {
         display: grid;
-        grid-template-columns: repeat(10, 1fr);
-        grid-template-rows: repeat(5, 90px);
+        grid-template-columns: repeat(20, 1fr);
+        grid-template-rows: repeat(13, 50px);
+        grid-auto-rows: 50px;
         justify-content: space-around;
         grid-gap: 0;
-        max-width: 890px;
+        max-width: 90%;
         margin: auto;
         padding: 5vw 0 5vw 0;
-        &[data-grid='card'] {
-            .c-card {
-                min-height: 320px;
-                min-width: 330px;
-                display: inline-flex;
-                &:nth-child(1) {
-                    grid-column: span 4 / 5;
-                    grid-row: 1 / 5;
-                }
-                &:nth-child(2) {
-                    grid-column: span 4 / 11;
-                    grid-row: 3 / 7;
-                }
-            }
-        }
     }
     &card {
         min-height: 320px;
         min-width: 330px;
         position: relative;
         display: inline-flex;
-        padding: 20px;
+        padding: 10px;
         margin: 0;
-    }
-    &founders {
-        &_this {
-            &:nth-child(1) {
-                grid-column: span 4 / 5;
-                grid-row: 1 / 5;
+        &_image {
+            width: 100%;
+            height: 100%;
+            max-width: 330px;
+            object-fit: cover;
+            object-position: left;
+            position: relative;
+            z-index: 0;
+        }
+        &_content {
+            background-color: var(--theme-card-content-bg);
+            padding: 10px;
+            position: relative;
+            z-index: 0;
+            box-shadow: 0px 5px 12px 0px rgba(0, 0, 0, 0.27);
+        }
+        &_description {
+            font-family: var(--font-normal);
+            font-size: 26px;
+        }
+        &_caption {
+            &-title {
+                // margin: 0;
             }
-            &:nth-child(2) {
-                grid-column: span 4 / 11;
-                grid-row: 3 / 7;
-            }
+        }
+        &::before {
+            content: '';
+            width: 90%;
+            height: 90%;
+            border: 4px solid var(--theme-card-before-border-bg);
+            position: absolute;
+            top: -5px;
+            left: -5px;
+            z-index: 0;
+            background-color: transparent;
         }
     }
 }
