--- a/src/styles/layout/section/_index.scss
+++ b/src/styles/layout/section/_index.scss
@@ -5,6 +5,7 @@
         width: 100%;
         min-height: 100vh;
         background-color: var(--theme-section-bg);
+        transition: transform 0.3s ease-in-out;
         &:first-of-type {
             padding-top: 7rem;
             display: flex;
@@ -13,6 +14,18 @@
         }
         &.u-extra {
             height: 130vh;
+        }
+        &#works {
+            min-height: 70vh;
+            &::after {
+                background-color: #eec32e;
+                content: '';
+                position: absolute;
+                z-index: -1;
+                top: 80%;
+                width: 100%;
+                height: 300px;
+            }
         }
     }
 }
