--- a/src/styles/utilities/_mouse.scss
+++ b/src/styles/utilities/_mouse.scss
@@ -45,8 +45,10 @@
         height: var(--size-active);
         cursor: pointer;
         background-image: linear-gradient(460deg, var(--color-a), var(--color-b));
+        opacity: 0.5;
         &::after,
         &::before {
+            opacity: 0.5;
             border-radius: 0%;
             border-width: 2px;
         }
